# milkyway_server

./: .gitignore  .gitmodules  AstronomyParameters.java  CMakeLists.txt  Integral.java  Milkyway3StartSearch.java  MilkywayCreditPolicy.java  MilkywayStartSearch.java  MilkywayValidationPolicy.java  MilkywayValidator.java  README  Stars.java  nbody_fpops_from_parameters.cxx  nbody_start_search.cxx  stream_fit_nm_start_search.cxx  stream_fit_parameters.cxx  stream_fit_parameters.hxx  stream_fit_star_data.cxx  stream_fit_star_data.hxx  stream_fit_start_search.cxx  stream_fit_validator.cxx  stream_fit_validator.hxx  update_binaries.sh
docs/: index.html
